--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
                         </div>
                     </div>
                 </label>
+                <input type="radio" name="slide" id="c4">
+                <label for="c4" class="card">
+                    <div class="row">
+                        <div class="icon">2</div>
+                        <div class="description">
+                            <h3>2023-2024</h3>
+                            <p>Finished my Computer Science Studies at Harvard</p>
+                        </div>
+                    </div>
+                </label>
             </div>
         </div>
     </section>
