new updated cs50 diploma

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
         <div class="about-content">
             <img src="profile.png" alt="About Me" class="about-image">
             <div class="about-text">
-                <h1 class="section-title">My name is Denisa</h1>
+                <h1 class="section-title">My name is Denisa</h1><br>
                 <h2>I am a <span class="auto-type"></span></h2>
+                <h1 class="section-title">Author of</h1> <h1><a href="https://zenvika.app/" style="color: rgb(252, 98, 175)">ZenVika: Meditation and Manifestation App</a></h1>
+                <br>
                 <p>CAD Technician | Administrator/Manager | Developer</p><br>
                 <p>I am a person with a positive attitude, growth-oriented, a fast learner, and someone who has excellent task-completion skills,
                 as well as extremely good general knowledge on a vast area of topics. I started being interested in coding since I was doing my
@@ -61,6 +63,7 @@
             </div>
             <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         </div>
+        <br><br>
         <div class="download-container">
             <a href="resume.pdf" download="resume.pdf">
             <button class="download-btn">Download Resume</button>
@@ -106,7 +109,7 @@
                 <input type="radio" name="slide" id="c4">
                 <label for="c4" class="card">
                     <div class="row">
-                        <div class="icon">2</div>
+                        <div class="icon">4</div>
                         <div class="description">
                             <h3>2023-2024</h3>
                             <p>Finished my Computer Science Studies at Harvard</p>
